tests/fail/RemainderAssign.java
package fail;

public class RemainderAssign {
    public static void main(String[] args) {
        System.out.println('a' %= 42);
    }
}
